--- a/index.html
+++ b/index.html
@@ -658,24 +658,25 @@
                         <option value="phenol">페놀프탈레인</option>
                     </select>
                 </div>
-    
-<div class="control-section">
-    <h3>👁️ 표시 옵션</h3>
-    <div class="toggle-group">
-        <button class="toggle-btn active" id="ionModeBtn">이온식</button>
-        <button class="toggle-btn" id="shapeModeBtn">도형</button>
-    </div>
-    <button id="shuffleShapesBtn">도형 뒤섞기 🔀</button>
-    <button id="toggleSpectatorBtn">반응하지 않는 이온 숨기기</button>
-    <button id="persistWaterBtn">물분자 사라지지 않기</button>
-</div>
+                    <div class="control-section">
+                    <h3>👁️ 표시 옵션</h3>
+                    <div class="toggle-group">
+                        <button class="toggle-btn active" id="ionModeBtn">이온식</button>
+                        <button class="toggle-btn" id="shapeModeBtn">도형</button>
+                    </div>
+                    <button id="shuffleShapesBtn">도형 뒤섞기 🔀</button>
+                    <button id="toggleSpectatorBtn">반응하지 않는 이온 숨기기</button>
+                    <button id="persistWaterBtn">물분자 사라지지 않기</button>
+                </div>
+                
+                <div class="control-section">
+                    <h3>🔄 컨트롤</h3>
+                    <button id="resetBtn">초기화</button>
+                    <button id="pauseBtn">일시정지</button>
+                    <button id="resetGraphBtn">그래프 초기화</button>
+                </div>
+                </div> <!-- control-panel 닫기 -->
 
-<div class="control-section">
-    <h3>🔄 컨트롤</h3>
-    <button id="resetBtn">초기화</button>
-    <button id="pauseBtn">일시정지</button>
-    <button id="resetGraphBtn">그래프 초기화</button>
-</div>
             <!-- 시뮬레이션 영역 -->
             <div class="simulation-area">
                 <div style="text-align: center;">
